Fixed alignment issues in mobile app

--- a/app/static_src/less/partials/header.less
+++ b/app/static_src/less/partials/header.less
@@ -43,10 +43,6 @@
   background-color:@white;
   height: 50px;
   line-height: 50px;
-  &.mb-app{
-    background-color:@veryLightYellow;
-    height: 45px;
-  }
   i{
     transform:rotate(0deg);
     transition:transform .3s;
