--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -463,6 +463,9 @@
     @media @medium{
         background-color:transparent;
     }
+    .mb-app-nav &{
+        margin-top:70px;
+    }
     > li{
         > a{
             line-height: 20px;
